RIA-5938 WA - Task 'Process Applications' to be broken into specific application types (#340)
* RIA-5938 updating dmn files and tests for splitting process application up

* RIA-5938 updating dmn files and tests for splitting process application up

* RIA-5938 updating dmn files and tests for splitting process application up